# desafio-aiqfome

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __main__.py
app/__core__/application/: logger.py  retry_with_backoff.py  settings.py  task_manager.py
app/__core__/application/gateways/: jwt_service.py  product_catalog.py
app/__core__/application/presenters/: base_presenter.py  customer_presenter.py
app/__core__/application/use_case/: base_product_cache_use_case.py  create_customer_use_case.py  delete_customer_use_case.py  favorite_product_use_case.py  fetch_customer_use_case.py  list_customer_favorite_products_use_case.py  list_customers_use_case.py  sign_in_use_case.py  sign_up_use_case.py  unfavorite_product_use_case.py  update_customer_use_case.py
app/__core__/domain/: strict_record.py
app/__core__/domain/entity/: base_domain_object.py  customer.py  product.py  user.py
app/__core__/domain/exception/: exception.py
app/__core__/domain/repository/: pagination.py  repository.py
app/__core__/domain/service/: slugify.py
app/__core__/domain/value_object/: customer_favorite_product.py  password.py  permission.py
app/infra/: dependency.py  security.py
app/infra/fakestore/: fakestore_product_catalog.py
app/infra/http/middleware/: correlation_id.py
app/infra/http/router/: auth.py  customers.py  favorites.py
app/infra/jwt/: jwt_service.py
app/infra/postgres/: database.py
app/infra/postgres/orm/: customer_favorite_product_orm.py  customer_orm.py  product_cache_orm.py  user_orm.py
app/infra/postgres/repository/: customer_favorite_product_repository.py  customer_repository.py  product_cache_repository.py  user_repository.py
development/: Dockerfile.dev  init.sql  requirements-dev.txt
tests/: conftest.py
tests/integration/: conftest.py  test_integration_setup.py  test_route_auth.py  test_route_customers.py  test_route_favorites.py
tests/unit/: test_base_domain_object.py  test_customer.py  test_password.py  test_permission.py  test_sign_in_use_case.py  test_sign_up_use_case.py  test_slugify.py  test_user.py
